# manipulator-inverse-kinematic

./: README.md  manipulator.drawio  simple-inverse-4DOF.pptx
MATLAB/: NOTE  baxter_4dof_pinvJacobian_inv.m  dh_trans_ur3_4dof.m
inverse_kinematic_1/: CMakeLists.txt  package.xml
inverse_kinematic_1/src/: baxter_4dof_inverse_1.cpp  ur3_gazebo_inverse_1.cpp
